# wgpu_grapher

./: .gitignore  Cargo.toml  LICENSE  README.md  build  buildrun  precommit  run
crates/egui_wgpu_grapher/: Cargo.toml
crates/egui_wgpu_grapher/src/: app.rs  egui_tools.rs  graphics.rs  main.rs  ui.rs
crates/egui_wgpu_grapher/src/app/: mod.rs  state.rs
crates/egui_wgpu_grapher/src/egui/: components.rs  egui_tools.rs  mod.rs  ui.rs
crates/egui_wgpu_grapher/src/grapher/: matrix.rs  mod.rs
crates/egui_wgpu_grapher/src/grapher/camera/: controller.rs  mod.rs
crates/egui_wgpu_grapher/src/grapher/math/: graph.rs  mod.rs  pde.rs
crates/egui_wgpu_grapher/src/grapher/mesh/: mod.rs  model.rs  pde.rs  solid.rs  textured.rs
crates/egui_wgpu_grapher/src/grapher_egui/: graph.rs  image_viewer.rs  mod.rs  model.rs
docs/: AI.md  DevNotes.md
egui_wgpu_grapher/: .gitignore  Cargo.toml
egui_wgpu_grapher/src/: lib.rs  main.rs
egui_wgpu_grapher/src/app/: mod.rs  state.rs
egui_wgpu_grapher/src/egui/: components.rs  egui_tools.rs  mod.rs  ui.rs
egui_wgpu_grapher/src/grapher/: gltf_loader.rs  matrix.rs  mod.rs
egui_wgpu_grapher/src/grapher/camera/: controller.rs  mod.rs
egui_wgpu_grapher/src/grapher/math/: graph.rs  mod.rs  pde.rs
egui_wgpu_grapher/src/grapher/pipeline/: light.rs  mod.rs  render_preferences.rs  texture.rs
egui_wgpu_grapher/src/grapher/render/: mod.rs  state.rs
egui_wgpu_grapher/src/grapher/scene/: mod.rs
egui_wgpu_grapher/src/grapher_egui/: graph_scene.rs  graph_ui.rs  image_scene.rs  mod.rs  model_scene.rs  solver_scene.rs
src/: graph.rs  (+9 more)
(+81 files in other folders)
