[package]
name = "wgpu_grapher"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0"
bytemuck = { version = "1.16", features = ["derive"] }
cgmath = "0.18"
env_logger = "0.10"
log = "0.4"
pollster = "0.3"
rand = { version = "0.9.1", features = ["thread_rng"] }
wgpu = "24.0"
winit = { version = "0.29", features = ["rwh_05"] }
