[package]
name = "egui_wgpu_grapher"
version = "1.0.0"
edition = "2024"

[dependencies]
egui = "0.33.3"
egui-wgpu = { version = "0.33.3",features = ["winit"] }
egui-winit = "0.33.3"
winit = "0.30.12"
pollster = "0.4.0"
bytemuck = "1.23.2"
rand = { version = "0.9.2", features = ["thread_rng"] }
egui-typed-input = "0.1.1"
gltf = "1.4.1"
clap = { version = "4.5.45", features = ["derive"] }
meval = "0.2.0"
cgmath = "0.18.0"
egui-file-dialog = "0.12.0"

[dependencies.image]
version = "0.24"
default-features = false
features = ["png", "jpeg"]
